<resources>
    <string name="app_name">red social. uca</string>
    <string name="RegistrarseBTN">Registrarse</string>
    <string name="LoginBTN">Iniciar Sesión</string>
    <string name="RegistrarseTXT">Registrate</string>

    <!--aqui cominezan los atributos del registro-->

    <string name="Nombre">Nombres</string>
    <string name="Apellido">Apellidos</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Edad">Edad</string>
    <string name="Finalizar">Finalizar</string>

</resources>